Text Editor highlight bug when a very long line scrolls #41657

Closed
opened 2014-08-31 15:16:08 +02:00 by Dun Liang · 9 comments

System Information
Windows 7 x64
GTX 650M

Blender Version
Broken: (2.71.5)

Short description of error
Text Editor highlight bug when a very long line (span multiple lines) scrolls

when I'm developing another patch [D765 ](https://developer.blender.org/D765), I find this bug, and I have a one liner patch for this

Exact steps for others to reproduce the error
open text editor and enable warps word and highlight

paste this text into text editor

def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.

resize text editor like this :
bug1.png

scroll down 3 line, it become
bug12.png

**System Information** Windows 7 x64 GTX 650M **Blender Version** Broken: (2.71.5) **Short description of error** Text Editor highlight bug when a very long line (span multiple lines) scrolls when I'm developing another patch [[D765](https://archive.blender.org/developer/D765) ](https://developer.blender.org/D765), I find this bug, and I have a one liner patch for this **Exact steps for others to reproduce the error** open text editor and enable warps word and highlight paste this text into text editor ``` def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234.def.1234. ``` resize text editor like this : ![bug1.png](https://archive.blender.org/developer/F107640/bug1.png) scroll down 3 line, it become ![bug12.png](https://archive.blender.org/developer/F107642/bug12.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @randon

Added subscriber: @randon

Added subscriber: @mont29

Added subscriber: @mont29

Eeeh, where is the one-liner fix? ;)

Eeeh, where is the one-liner fix? ;)
Author

texts.diff
sorry, I don't know how to submit a patch to this bug

[texts.diff](https://archive.blender.org/developer/F107647/texts.diff) sorry, I don't know how to submit a patch to this bug
Bastien Montagne self-assigned this 2014-08-31 15:31:20 +02:00

Thanks, will check (and for such simple patches, no need to fire a diff review task, just attaching the patch is enough ;) ).

Thanks, will check (and for such simple patches, no need to fire a diff review task, just attaching the patch is enough ;) ).

This issue was referenced by 87c76ddaff

This issue was referenced by 87c76ddaffc6dfebf0b85f8ec147b4ede9552a90

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 87c76ddaff.

Closed by commit 87c76ddaff.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41657
No description provided.