Fix T41657: Text Editor highlight bug when a very long line scrolls

Based on patch by randon (Dun Liang), but no need to recompute lengths here, we already have the info.